2022-05-01
    In MsvgPathEltoPolyEl limit the number of points generated for a bezier curve
    to MAX_BEZPOINTS
    Added an user-data parameter to MsvgSerCookedTree
    Added MsvgGetCookedDims, makes a rough estimation of the svg dimensions in a
    cooked tree
2022-04-22 
    corrections to the prog guide
2020-06-10 
    updated docs to v0.21
2020-06-09 
    Solving bugs
2020-06-04 
    updated docs to v0.20
2020-06-04 
    move svg examples to svgpics subfdir
2020-06-04 
    Solving bugs some tests improvements
2020-05-31 
    Upadted docs to v0.19
2020-05-31 
    Completed the EID_TEXT integration Added the inheritable text atributtes to
    MsvgPaintCtx Solving bugs
2020-05-30 
    Agregate TEXT contens in a unique string New virtual element EID_V_CONTENT,
    but no used by now Trasnlate &,<,> writing contents
2020-05-28 
    Changed license to the Expat license
2020-05-28 
    bug corrected
2020-05-27 
    updated docs v0.17
2020-05-27 
    solving bugs
2020-05-27 
    Completed the EID_PATH integration Not a tiny 1.2 spec but process the "style"
    parameter the MGRX example programs now can process EID_PATH and roumded EID_RECT
2020-05-22 
    Revert "Revert "v0.16""
2020-05-22 
    Revert "v0.16"
2020-05-22 
    updated programmer's guide to v0.16
2020-05-21 
    added MsvgCooked2RawTree function first work to integrate EID_PATH
2020-05-19 
    The serialize process has the ID_USE elements in account Functions to find
    elements Updated the programmer's guide to v0.15
2020-05-16 
    improvements to the mgrx rasterize code
2020-05-10 
    Continue integration of EID_TEXT, EID_DEFS, EID_USE Update programmer's guide
2020-05-10 
    Inital support of EID_TEXT, EID_DEFS and EID_USE elements Added fcontent
    variable to the MsvgElement structure, a limkend list of MsvgContent structs,
    by now only the EID_TEXT element can have contents For EID_ELLIPSE changed
    rx, ry cooked parameters to rx_x, rx_y, ry_x, ry_y the two points that defines